--- a/index.css
+++ b/index.css
@@ -9,11 +9,11 @@ body {
 }
 
 /* Start http://www.cursors-4u.com */
+
 * {
-  cursor: url(http://ani.cursors-4u.net/cursors/cur-12/cur1138.ani),
-  url(http://ani.cursors-4u.net/cursors/cur-12/cur1138.png),
-  progress !important;
+  cursor: url(http://ani.cursors-4u.net/cursors/cur-12/cur1138.ani), url(http://ani.cursors-4u.net/cursors/cur-12/cur1138.png), progress !important;
 }
+
 /* End http://www.cursors-4u.com */
 
 header {
@@ -55,7 +55,6 @@ nav li {
   display: inline-block;
   margin-left: 100px;
   padding-top: 29px;
-
   position: relative;
 }
 
@@ -75,11 +74,9 @@ nav a::before {
   display: block;
   height: 5px;
   background-color: #00f395;
-
   position: absolute;
   top: 0;
   width: 0%;
-
   transition: all ease-in-out 250ms;
 }
 
