--- a/index.css
+++ b/index.css
@@ -8,13 +8,10 @@ body {
   margin: 0 auto;
 }
 
-/* Start http://www.cursors-4u.com */
-
+/*Cursor Icon*/
 * {
   cursor: url(http://ani.cursors-4u.net/cursors/cur-12/cur1138.ani), url(http://ani.cursors-4u.net/cursors/cur-12/cur1138.png), progress !important;
 }
-
-/* End http://www.cursors-4u.com */
 
 header {
   background-color: black;
