--- a/index.css
+++ b/index.css
@@ -9,9 +9,9 @@ body {
 }
 
 /*Cursor Icon*/
-* {
+/** {
   cursor: url(http://ani.cursors-4u.net/cursors/cur-12/cur1138.ani), url(http://ani.cursors-4u.net/cursors/cur-12/cur1138.png), progress !important;
-}
+}*/
 
 header {
   background-color: black;
