--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
 body {
+  background-color: #00C9BF;
 	font-family: 'Quicksand', sans-serif;
-	background-color: #00C9BF;
 }
 .container {
+  margin: 0 auto;
 	width: 90%;
-	margin: 0 auto;
 }
 /*Cursor Icon*/
 
@@ -23,24 +23,24 @@ header {
   border-color: black;*/
 }
 header::after {
+  clear: both;
 	content: '';
 	display: table;
-	clear: both;
 }
 .logo {
-	position: relative;
 	float: left;
-	width: 170px;
 	height: 75px;
-	padding: 0px;
+	padding: 0;
+  position: relative;
+	width: 170px;
 }
 nav {
 	float: right;
 }
 nav ul {
+  list-style: none;
 	margin: 0;
 	padding: 0;
-	list-style: none;
 }
 nav li {
 	display: inline-block;
@@ -50,22 +50,22 @@ nav li {
 }
 nav a {
 	color: white;
-	text-decoration: none;
-	text-transform: uppercase;
 	font-size: 17px;
+  text-decoration: none;
+	text-transform: uppercase;
 }
 nav a:hover {
 	color: #00C9BF;
 }
 nav a::before {
+	background-color: #00C9BF;
 	content: '';
 	display: block;
 	height: 5px;
-	background-color: #00C9BF;
 	position: absolute;
 	top: 0;
-	width: 0%;
 	transition: all ease-in-out 250ms;
+	width: 0;
 }
 nav a:hover::before {
 	width: 100%;
