--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body {
 .container {
   margin: 0 auto;
 	width: 90%;
+  height: 100%;
 }
 
 header {
@@ -24,10 +25,8 @@ header::after {
 }
 .logo {
 	float: left;
-	height: 75px;
 	padding: 0;
-  position: relative;
-	width: 170px;
+	width: 10%;
 }
 nav {
 	float: right;
@@ -39,13 +38,13 @@ nav ul {
 }
 nav li {
 	display: inline-block;
-	margin-left: 100px;
-	padding-top: 29px;
+	margin-left: 20px;
+	padding-top: 7%;
 	position: relative;
 }
 nav a {
 	color: white;
-	font-size: 17px;
+  font-size: 1.3vw;
   text-decoration: none;
 	text-transform: uppercase;
 }
@@ -68,6 +67,6 @@ nav a:hover::before {
 .top {
 	text-align: center;
 }
-iframe {
+.video {
 	padding-top: 100px;
 }
