--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body {
 
 header {
 	background-color: black;
-	border-radius: 10px;
+	border-radius: 1vw;
 	position: center;
 	width: 100%;
 	/*border: solid;
@@ -26,8 +26,9 @@ header::after {
 }
 .logo {
 	float: left;
-	padding: 0;
-	width: 9%;
+	position: relative;
+	height: 5.5vw;
+	bottom: 0px;
 }
 nav {
 	float: right;
@@ -38,14 +39,16 @@ nav ul {
 	padding: 0;
 }
 nav li {
-	display: inline-block;
-	margin-left: 30px;
-	padding-top: 7%;
+	display: inline-grid;
+	margin-left: 3vw;
+	padding-top: 2vw;
+	padding-bottom: 0.5vw;
 	position: relative;
 }
 nav a {
 	color: white;
   font-size: 1.3vw;
+	vertical-align: bottom;
   text-decoration: none;
 	text-transform: uppercase;
 }
@@ -56,11 +59,11 @@ nav a::before {
 	background-color: #00C9BF;
 	content: '';
 	display: block;
-	height: 5px;
+	height: 0.5vw;
 	position: absolute;
-	top: 0;
+	top: 0px;
 	transition: all ease-in-out 250ms;
-	width: 0;
+	width: 0px;
 }
 nav a:hover::before {
 	width: 100%;
@@ -69,7 +72,8 @@ nav a:hover::before {
 	text-align: center;
 }
 .video {
-	padding-top: 100px;
+	padding-top: 3vw;
+	align-self: center;
 }
 .image {
 	padding-top: 100px;
