--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #00C9BF;
-	font-family: 'Quicksand', sans-serif;
+    background-color: #00C9BF;
+    font-family: 'Quicksand', sans-serif;
 }
 .container {
     margin: auto;
@@ -69,10 +69,10 @@ nav a:hover::before {
     left: 25%;
     height: 450px;
     width: 800px;
-    border-style: solid;
-    border-color: #000;
+    /*border-style: solid;
+    border-color: #000;*/
 }
-@keyframes fade {
+@keyframes fadeIn {
     from {
 	opacity: .4;
     }
@@ -80,9 +80,18 @@ nav a:hover::before {
 	opacity: 1;
     }
 }
+@keyframes fadeOut {
+    from {
+	opacity: 1;
+    }
+    to {
+	opacity: 0;
+	display: none;
+    }
+}
 .fade {
     display: none;
-    animation-name: fade;
+    animation-name: fadeIn;
     animation-duration: 2s;
     height: inherit;
     width: inherit;
@@ -92,16 +101,44 @@ nav a:hover::before {
     position: relative;
     top: -40px;
     width: 100%;
-    height: 520px;
-    background-color: #00CAAF;
+    height: 520px;;
+}
+.Button {
+    cursor: pointer;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    margin-top: 5px;
+    border-radius: 50%;
+    opacity: .5;
+    transition: all 0.3s ease-in;
+}
+.Button:hover {
+    transform: rotate(90deg);
+    opacity: 1;
+}
+.Arrow {
+    cursor: pointer;
+    display: inline-block;
+    color: white;
+    position: absolute;
+    top: 50%;
+    right: 0%;
+    height: 20px;
+    width: 10px;
+    opacity: 0.5;
+    font-size: 24px;
+    margin-right: 5px;
+    transition: all 0.2s ease-in;
+}
+.Arrow:hover {
+    opacity: 1;
+    font-size: 28px;
 }
 .top {
     text-align: center;
     padding-top: 100px;
     z-index: 0;
-}
-.video {
-	padding-top: 100px;
 }
 .image {
 	padding-top: 100px;
