--- a/index.css
+++ b/index.css
@@ -9,9 +9,11 @@ body {
 
 }
 header {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0%;
     background-color: black;
     border-radius: 1vw;
-    position: center;
     width: 100%;
     z-index: 1;
 }
@@ -135,7 +137,7 @@ nav a:hover::before {
 }
 .top {
     text-align: center;
-    padding-top: 100px;
+    padding-top: 30px;
     z-index: 0;
 }
 .image {
