Moved font declaration to CSS file

--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
+
 body {
   background-color: #00C9BF;
 	font-family: 'Quicksand', sans-serif;
