--- a/index.css
+++ b/index.css
@@ -2,81 +2,96 @@
 
 body {
   background-color: #00C9BF;
-	font-family: 'Quicksand', sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
+
 .container {
   margin: auto;
-	width: 90%;
+  width: 90%;
   height: 100%;
-
 }
 
 header {
-	background-color: black;
-	border-radius: 1vw;
-	position: center;
-	width: 100%;
-	/*border: solid;
+  background-color: black;
+  border-radius: 1vw;
+  position: center;
+  width: 100%;
+
+  /*
+  border: solid;
   border-radius: 10px;
   border-width: thin;
-  border-color: black;*/
+  border-color: black;
+  */
 }
+
 header::after {
   clear: both;
-	content: '';
-	display: table;
+  content: '';
+  display: table;
 }
+
 .logo {
-	float: left;
-	position: relative;
-	height: 5.5vw;
-	bottom: 0px;
+  float: left;
+  position: relative;
+  height: 5.5vw;
+  bottom: 0;
 }
+
 nav {
-	float: right;
+  float: right;
 }
+
 nav ul {
   list-style: none;
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
+
 nav li {
-	display: inline-grid;
-	margin-left: 3vw;
-	padding-top: 2vw;
-	padding-bottom: 0.5vw;
-	position: relative;
+  display: inline-grid;
+  margin-left: 3vw;
+  padding-top: 2vw;
+  padding-bottom: 0.5vw;
+  position: relative;
 }
+
 nav a {
-	color: white;
+  color: white;
   font-size: 1.3vw;
-	vertical-align: bottom;
+  vertical-align: bottom;
   text-decoration: none;
-	text-transform: uppercase;
+  text-transform: uppercase;
 }
+
 nav a:hover {
-	color: #00C9BF;
+  color: #00C9BF;
 }
+
 nav a::before {
-	background-color: #00C9BF;
-	content: '';
-	display: block;
-	height: 0.5vw;
-	position: absolute;
-	top: 0px;
-	transition: all ease-in-out 250ms;
-	width: 0px;
+  background-color: #00C9BF;
+  content: '';
+  display: block;
+  height: 0.5vw;
+  position: absolute;
+  top: 0;
+  transition: all ease-in-out 250ms;
+  width: 0;
 }
+
 nav a:hover::before {
-	width: 100%;
+  width: 100%;
 }
+
 .top {
-	text-align: center;
+  text-align: center;
 }
+
 .video {
-	padding-top: 3vw;
-	align-self: center;
+  padding-top: 3vw;
+  align-self: center;
 }
+
 .image {
-	padding-top: 100px;
+  padding-top: 100px;
 }
