--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
 
 body {
-  background-image: url("./images/background.jpg");
+  background-image: url("./images/background_1.jpg");
   font-family: 'Quicksand', sans-serif;
 }
 
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-  background-color: black;
+  background-color: #0bc4b9;
   border-radius: 1vw;
   position: center;
   width: 100%;
@@ -57,7 +57,7 @@ nav li {
 }
 
 nav a {
-  color: white;
+  color: black;
   font-size: 1.3vw;
   vertical-align: bottom;
   text-decoration: none;
@@ -65,11 +65,11 @@ nav a {
 }
 
 nav a:hover {
-  color: #00C9BF;
+  color: white;
 }
 
 nav a::before {
-  background-color: #00C9BF;
+  background-color: white;
   content: '';
   display: block;
   height: 0.5vw;
