Slideshow arrows work -- fixed centering for old unicode arrows but not new meterial design ones

--- a/css/materialdesignicons.css
+++ b/css/materialdesignicons.css
@@ -15,6 +15,7 @@
   line-height: inherit;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  transition: all 0.2s ease-in;
 }
 
 .mdi-access-point:before {
