--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -27,6 +27,12 @@ nav.navbar {
                         color: black;
                     }
                 }
+                button {
+                    padding: 0;
+                    padding-right: 5px;
+                    font-size: 0.8rem;
+
+                }
             }
         }
     }
