--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,6 +1,11 @@
 h1 {
     text-align: center;
-    margin: 1rem;
+    margin-top: 0;
     color: white;
     padding: 1rem;
+}
+
+h3 {
+    color: white;
+    text-align: center;
 }
