--- a/scss/module/_name-box.scss
+++ b/scss/module/_name-box.scss
@@ -1,7 +1,7 @@
 .name-box {
     text-align: center;
-    margin: auto;
-    .name-card {
-        
-    }
+    line-height: 1.5rem;
+    margin: 0;
+    width: 100%;
+    
 }
