--- a/scss/module/_sponsor.scss
+++ b/scss/module/_sponsor.scss
@@ -4,4 +4,9 @@
     &:hover {
         background-color: lighten(#666, 15%);
     }
+
+    img {
+        height: 200px;
+        width: auto;
+    }
 }
