--- a/scss/layout/_calendar.scss
+++ b/scss/layout/_calendar.scss
@@ -2,3 +2,11 @@
     text-align: center;
     padding-top: 5%;
 }
+
+.calendar-container {
+    padding: auto;
+    text-align: center;
+    .day-box {
+        border: 1px solid black;
+    }
+}
