autogenerate calendar skeleton based on date

--- a/scss/layout/_calendar.scss
+++ b/scss/layout/_calendar.scss
@@ -9,4 +9,25 @@
     .day-box {
         border: 1px solid black;
     }
+    #sun {
+
+    }
+    #mon {
+
+    }
+    #tue {
+
+    }
+    #wed {
+
+    }
+    #thu {
+
+    }
+    #fri {
+
+    }
+    #sat {
+        
+    }
 }
