--- a/scss/layout/_calendar.scss
+++ b/scss/layout/_calendar.scss
@@ -4,10 +4,31 @@
 }
 
 .calendar-container {
-    padding: auto;
-    text-align: center;
+    text-align: left;
+    .card {
+        margin: 0;
+    }
+    h4 {
+        text-align: center;
+    }
     .day-box {
-        border: 1px solid black;
+        padding: 8px;
+
+        .date-label {
+            text-align: right;
+            margin-bottom: 0; 
+            color: red;
+            padding: 0;
+        }
+        .day-label {
+            text-align: left;
+            margin-bottom: 0;
+            color: green;
+            padding: 0;
+        }
+        .card-header {
+            padding: 3px;
+        }
     }
     #sun {
 
