--- a/scss/layout/_calendar.scss
+++ b/scss/layout/_calendar.scss
@@ -11,44 +11,30 @@
     h4 {
         text-align: center;
     }
-    .day-box {
-        padding: 8px;
-
-        .date-label {
-            text-align: right;
-            margin-bottom: 0; 
-            color: red;
-            padding: 0;
-        }
-        .day-label {
-            text-align: left;
-            margin-bottom: 0;
-            color: green;
-            padding: 0;
-        }
-        .card-header {
+    #week {
+        .day-box {
             padding: 3px;
+            .date-label {
+                color: red;
+                padding: 0;
+                float: right;
+                display: inline-block;
+            }
+            .day-label {
+                color: green;
+                padding: 0;
+                display: inline-block;
+            }
+            .card-header {
+                padding: 3px;
+            }
         }
     }
-    #sun {
-
-    }
-    #mon {
-
-    }
-    #tue {
-
-    }
-    #wed {
-
-    }
-    #thu {
-
-    }
-    #fri {
-
-    }
-    #sat {
-        
-    }
+    #sun {}
+    #mon {}
+    #tue {}
+    #wed {}
+    #thu {}
+    #fri {}
+    #sat {}
 }
