--- a/scss/layout/_half-col.scss
+++ b/scss/layout/_half-col.scss
@@ -9,3 +9,5 @@
 .col-md-9-5 { width: 79.16667%; } // = 75 + 4.16667
 .col-md-10-5 { width: 87.5%; } // = 83.3333 + 4.16667
 .col-md-11-5 { width: 95.8333%; } // = 91.6666 + 4.16667
+
+.col-lg-1-5 { width: 12.5%; }
