--- a/scss/layout/_calendar.scss
+++ b/scss/layout/_calendar.scss
@@ -28,6 +28,9 @@
             .card-header {
                 padding: 3px;
             }
+            .calendar-event {
+                font-size: 1rem;
+            }
         }
         #sun {}
         #mon {}
