--- a/css/main.css
+++ b/css/main.css
@@ -116,16 +116,18 @@ footer .footer-list a {
     position: relative;
     right: 2rem; }
   .carousel .carousel-control-prev:hover {
-    background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); }
+    background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)); }
     .carousel .carousel-control-prev:hover i {
-      text-shadow: 0px 0px 4px white; }
+      text-shadow: 0px 0px 4px white;
+      font-size: 2.5rem; }
   .carousel .carousel-control-next .carousel-control-next-icon i {
     position: relative;
     left: 2rem; }
   .carousel .carousel-control-next:hover {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); }
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)); }
     .carousel .carousel-control-next:hover i {
-      text-shadow: 0px 0px 4px white; }
+      text-shadow: 0px 0px 4px white;
+      font-size: 2.5rem; }
 
 .jumbotron {
   background-color: #666;
