--- a/scss/module/_carousel.scss
+++ b/scss/module/_carousel.scss
@@ -16,8 +16,9 @@
         &:hover {
             i {
                 text-shadow: 0px 0px 4px white;
+                font-size: 2.5rem;
             }
-            background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6));
         }
     }
     .carousel-control-next {
@@ -30,8 +31,9 @@
         &:hover {
             i {
                 text-shadow: 0px 0px 4px white;
+                font-size: 2.5rem;
             }
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6));
         }
     }
 }
