--- a/css/main.css
+++ b/css/main.css
@@ -118,16 +118,14 @@ footer .footer-list a {
   .carousel .carousel-control-prev:hover {
     background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)); }
     .carousel .carousel-control-prev:hover i {
-      text-shadow: 0px 0px 4px white;
-      font-size: 2.5rem; }
+      text-shadow: 0px 0px 4px white; }
   .carousel .carousel-control-next .carousel-control-next-icon i {
     position: relative;
     left: 2rem; }
   .carousel .carousel-control-next:hover {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)); }
     .carousel .carousel-control-next:hover i {
-      text-shadow: 0px 0px 4px white;
-      font-size: 2.5rem; }
+      text-shadow: 0px 0px 4px white; }
 
 .jumbotron {
   background-color: #666;
