--- a/scss/layout/_calendar.scss
+++ b/scss/layout/_calendar.scss
@@ -11,7 +11,7 @@
     h4 {
         text-align: center;
     }
-    #week {
+    #weeks {
         .day-box {
             padding: 3px;
             .date-label {
