--- a/scss/module/_jumbotron.scss
+++ b/scss/module/_jumbotron.scss
@@ -17,3 +17,9 @@
 
     }
 }
+
+@media screen and (max-width: 600px) {
+    p {
+        font-size: .85rem !important;//this is going to become a trend isnt it
+    }
+}
