--- a/scss/layout/_calendar.scss
+++ b/scss/layout/_calendar.scss
@@ -4,14 +4,16 @@
 }
 
 .calendar-container {
-    text-align: left;
+    text-align: center;
     .card {
         margin: 0;
     }
-    h4 {
+    h5 {
         text-align: center;
+        display: inline-block;
     }
     #weeks {
+        text-align: left;
         .day-box {
             padding: 3px;
             .date-label {
@@ -32,6 +34,18 @@
                 font-size: 1rem;
             }
         }
+    }
+    #calendarNavNextButton {
+        text-align: center;
+        display: inline-block;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+    }
+    #calendarNavPrevButton {
+        text-align: center;
+        display: inline-block;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
     }
 }
 
