--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,9 @@ nav.navbar {
     color: white; }
     nav.navbar button.navbar-toggler .navbar-toggler-icon i.fa-bars:hover {
       color: black; }
+  nav.navbar .navbar-collapse ul li.nav-item {
+    display: flex;
+    align-items: center; }
   nav.navbar .navbar-collapse ul li.nav-item a.nav-link {
     color: white; }
     nav.navbar .navbar-collapse ul li.nav-item a.nav-link:hover {
