--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,8 @@ div.body-dark {
   .calendar-container #weeks {
     text-align: left; }
     .calendar-container #weeks .day-box {
-      padding: 3px; }
+      padding-left: 3px;
+      padding-right: 3px; }
       .calendar-container #weeks .day-box .date-label {
         color: red;
         padding: 0;
@@ -49,7 +50,12 @@ div.body-dark {
       .calendar-container #weeks .day-box .card-header {
         padding: 3px; }
       .calendar-container #weeks .day-box .calendar-event {
-        font-size: 1rem; }
+        font-size: 1rem;
+        height: 4rem;
+        position: relative;
+        top: -0.5rem; }
+      .calendar-container #weeks .day-box .default-calendar-block {
+        height: 4rem; }
   .calendar-container #calendarNavNextButton {
     text-align: center;
     display: inline-block;
