cleaned up calendar code and added whitespace underneath calendar

--- a/scss/layout/_calendar.scss
+++ b/scss/layout/_calendar.scss
@@ -54,6 +54,9 @@
         padding-left: 0.5rem;
         padding-right: 0.5rem;
     }
+    #calendar-bottom-padding {
+        height: 30rem;
+    }
 }
 
 @media screen and (max-width: 1000px) {
