--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,8 @@ div.body-dark {
     display: inline-block;
     padding-left: 0.5rem;
     padding-right: 0.5rem; }
+  .calendar-container #calendar-bottom-padding {
+    height: 30rem; }
 
 @media screen and (max-width: 1000px) {
   .day-box {
