minor calendar layout changes

--- a/css/main.css
+++ b/css/main.css
@@ -49,13 +49,24 @@ div.body-dark {
         display: inline-block; }
       .calendar-container #weeks .day-box .card-header {
         padding: 3px; }
-      .calendar-container #weeks .day-box .calendar-event {
-        font-size: 1rem;
-        height: 4rem;
-        position: relative;
-        top: -0.5rem; }
-      .calendar-container #weeks .day-box .default-calendar-block {
-        height: 4rem; }
+      .calendar-container #weeks .day-box .card-body {
+        max-height: 6rem; }
+        .calendar-container #weeks .day-box .card-body .calendar-event-row {
+          position: relative;
+          top: -1rem; }
+        .calendar-container #weeks .day-box .card-body .calendar-event {
+          margin: 0;
+          padding: 0;
+          font-size: 0.9rem;
+          height: 4rem;
+          position: relative;
+          top: -0.5rem;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          max-height: 4rem; }
+        .calendar-container #weeks .day-box .card-body .default-calendar-block {
+          height: 4rem; }
   .calendar-container #calendarNavNextButton {
     text-align: center;
     display: inline-block;
