--- a/scss/layout/_calendar.scss
+++ b/scss/layout/_calendar.scss
@@ -31,14 +31,27 @@
             .card-header {
                 padding: 3px;
             }
-            .calendar-event {
-                font-size: 1rem;
-                height: 4rem;
-                position: relative;
-                top: -0.5rem;
-            }
-            .default-calendar-block {
-                height: 4rem;
+            .card-body {
+                max-height: 6rem;
+                .calendar-event-row {
+                    position: relative;
+                    top: -1rem;
+                }
+                .calendar-event {
+                    margin: 0;
+                    padding: 0;
+                    font-size: 0.9rem;
+                    height: 4rem;
+                    position: relative;
+                    top: -0.5rem;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    max-height: 4rem;
+                }
+                .default-calendar-block {
+                    height: 4rem;
+                }
             }
         }
     }
